--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Website</title>
+    <meta name="description" content="Personal Website - Fajar Fathurrahman Ramdhani - Front end & Designer web">
   </head>
   <body>
     <div id="root"></div>
